tests/fixtures/typescript/expressions/spread/invalid_position/input_invalid_spread_subscript.svelte
<script lang="ts">
	obj[...a];
</script>
